# Computacao_Grafica

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h
TrabalhoCG/: CMakeLists.txt  README.md
TrabalhoCG/include/: TransformDialog.h  mainwindow.h
TrabalhoCG/include/ModificacoesQuadro/: changeColor.h  changeThickness.h  clearCanvas.h
TrabalhoCG/src/: TransformDialog.cpp  mainwindow.cpp
TrabalhoCG/src/ModificacoesQuadro/: changeColor.cpp  changeThickness.cpp  clearCanvas.cpp
